<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/scanPadding"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/scannedImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/scanPadding"
            tools:ignore="ContentDescription" />
    </FrameLayout>


    <HorizontalScrollView
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/original"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_image"
                android:text="@string/original"
                android:textColor="@android:color/white"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/magicColor"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_enhamce_image"
                android:singleLine="true"
                android:text="@string/magicColor"
                android:textColor="@android:color/white"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/grayMode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_gray"
                android:singleLine="true"
                android:text="@string/grayMode"
                android:textColor="@android:color/white"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/BWMode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_black_and_white"
                android:singleLine="true"
                android:text="@string/blackAndWhite"
                android:textColor="@android:color/white"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/biColorButton1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/bicolor"
                android:singleLine="true"
                android:text="@string/biColor"
                android:textColor="@android:color/white"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/biColorButton2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/greyred"
                android:singleLine="true"
                android:text="@string/greyAndRed"
                android:textColor="@android:color/white"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/biColorButton3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/bluewhite"
                android:singleLine="true"
                android:text="@string/blueAndWhite"
                android:textColor="@android:color/white"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/biColorButton4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/redwhite"
                android:singleLine="true"
                android:text="@string/redAndWhite"
                android:textColor="@android:color/white"
                tools:ignore="ButtonStyle" />

        </LinearLayout>


    </HorizontalScrollView>

    <Button
        android:id="@+id/doneButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:background="@drawable/btn_background"
        android:text="@string/done" />

</LinearLayout>
